--- a/models/ebola/4cities-gamma-CL/information/Makefile
+++ b/models/ebola/4cities-gamma-CL/information/Makefile
@@ -9,7 +9,8 @@ time:
 	time mpirun -n 4 PISKa -i ebola-model-info-gamma.cka -i ebola-init-CL-info-4.cka -i ebola-all_obs.cka -p 100 -t 400 -sync-t 1
 
 mod-info:
-	time mpirun -n 4 PISKa -i ebola-model-info-gamma.cka -i ebola-init-CL-info-4.cka -i ebola-all_obs.cka -i ebola-info_pert-fast.cka -p 100 -t 400 -sync-t 1
+	time mpirun -n 4 PISKa -i ebola-model-info-gamma.cka -i ebola-init-CL-info-4.cka -i ebola-all_obs.cka -i ebola-info_pert-fast.cka -p 100 -t 500 -sync-t 1
+	mv *.out base.simdir
 
 base.simdir: base.model.cka base.city.cka base.obs.cka
 
