added lambda calculation and curve adjust

--- a/models/ebola/4cities-gamma-CL/information/Makefile
+++ b/models/ebola/4cities-gamma-CL/information/Makefile
@@ -13,11 +13,29 @@ mod-info:
 	mv *.out base.simdir
 
 make-precompile:
-	time mpirun -n 4 PISKa -i ebola-model-info-gamma.cka -i ebola-init-CL-info-4.cka -i ebola-all_obs.cka -i ebola-info_pert-fast.cka -make-sim precomp.bout
+	time mpirun -n 4 PISKa -i ebola-model-info-gamma.cka -i ebola-init-CL-info-4.cka -i ebola-all_obs.cka  -make-sim precomp.bout
 
 load-precompile:
 	time mpirun -n 4 PISKa -p 100 -t 500 -sync-t 1 -load-sim precomp.bout -i parameters.cka
 	mv *.out base.simdir
+
+load-precompile-10:
+	for i in `seq 1 100`; do\
+		rm -r simdir/$$i;\
+		time mpirun -n 4 PISKa -p 50 -t 200 -sync-t 1 -load-sim precomp.bout -i parameters.cka;\
+		mkdir simdir/$$i;\
+		mv *.out simdir/$$i;\
+	done
+
+test:
+	for i in `seq 1 10`; do\
+		rm -r $$i.kaka;\
+		#echo $$i, primero;\
+		#touch hola;\
+		#mkdir $$i.kaka;\
+		#mv hola $$i.kaka;\
+	done
+
 
 base.simdir: base.model.cka base.city.cka base.obs.cka
 
