--- a/models/ebola/4cities-gamma-CL/information/Makefile
+++ b/models/ebola/4cities-gamma-CL/information/Makefile
@@ -6,18 +6,18 @@ mv Rplots.pdf $@
 endef
 
 time:
-	time mpirun -n 4 PISKa -i ebola-model-info-gamma.cka -i ebola-init-CL-info-4.cka -i ebola-all_obs.cka -p 100 -t 400 -sync-t 1
+	time mpirun -n 4 PISKa -i model-gamma.cka -i ebola-init-CL-info-4.cka -i ebola-all_obs.cka -p 100 -t 400 -sync-t 1
 	mv *.out base.simdir
 adjust:
-	time mpirun -n 4 PISKa -i ebola-model-info-gamma.cka -i ebola-init-CL-info-4.cka -i ebola-all_obs.cka -p 125 -t 500 -sync-t 1
+	time mpirun -n 4 PISKa -i model-gamma.cka -i ebola-init-CL-info-4.cka -i ebola-all_obs.cka -p 125 -t 500 -sync-t 1
 	mv *.out base.simdir
 
 mod-info:
-	time mpirun -n 4 PISKa -i ebola-model-info-gamma.cka -i ebola-init-CL-info-4.cka -i ebola-all_obs.cka -i ebola-info_pert-fast.cka -p 100 -t 500 -sync-t 1
+	time mpirun -n 4 PISKa -i model-gamma.cka -i ebola-init-CL-info-4.cka -i ebola-all_obs.cka -i ebola-info_pert-fast.cka -p 100 -t 500 -sync-t 1
 	mv *.out base.simdir
 
 make-precompile:
-	time mpirun -n 4 PISKa -i ebola-model-info-gamma.cka -i ebola-init-CL-info-4.cka -i ebola-all_obs.cka  -make-sim precomp.bout
+	time mpirun -n 4 PISKa -i model-gamma.cka -i ebola-init-CL-info-4.cka -i ebola-all_obs.cka  -make-sim precomp.bout
 
 load-precompile:
 	time mpirun -n 4 PISKa -p 100 -t 400 -sync-t 1 -load-sim precomp.bout -i parameters.cka
